# Compliance_App

./: .example.env  .gitignore  AGENTS.md  Makefile  PROJECT_STATE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
alembic/: env.py
app/: __init__.py
docker/: compose.notebooklm.yml
docs/: ANALYSIS_PASSES.md  DATAPOINT_BUNDLE_SCHEMA.md  GOLD_STANDARD_REPORT_TEMPLATE_v1.md  PR_CONVEYOR_PLAN.md  regulatory_research_service.md  regulatory_sources_import.md
git_workflows/: codex_review.yml  codex_run_prompt.yml
scripts/: backfill_chunks.py  diagnose_run.py  migrate_sqlite_to_postgres.py  run_discovery_analysis_benchmark.py  run_iberdrola_2025_diagnostics.py  run_postgres_e2e.py  run_uat_harness.py
tests/: conftest.py  test_api_config.py  test_api_health.py  test_applicability.py  test_assessment_pipeline.py  test_audit_trail.py  test_auth_config_validation.py  test_auth_tenant_isolation.py  test_backend_parity.py  test_bundle_routing.py  test_chunking.py  test_chunking_golden.py  test_company_api.py  test_company_document_link.py  test_cors.py  test_db_crud.py  test_db_migrations.py  test_db_migrations_postgres.py  test_dev_defaults_postgres.py  test_document_auto_discover_api.py  test_document_identity.py  test_document_inventory_api.py  test_document_upload_integration.py  test_evidence_pack.py  test_evidence_pack_api.py  test_export_lifecycle_api.py  test_golden_run_contract.py  test_green_finance_matrix.py  test_green_finance_pipeline.py  test_guided_flow_api_integration.py  test_hybrid_retrieval.py  (+57 more)
(+268 files in other folders)
