[project]
name = "compliance-app"
version = "0.1.0"
description = "Deterministic compliance analysis application"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
